--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>Fact Generator</title>
   </head>
-  <body class='bg-dark'>
+  <body class='
+  bg-gradient-to-b from-gray-400 to-gray-500 
+  dark:bg-gradient-to-b dark:from-gray-800 dark:to-gray-900'>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
